--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -131,13 +131,13 @@ Here are some tips for converting a Gatsby `.js` component into a `.astro` compo
 
 1. Change any [Gatsby or JSX syntax to Astro syntax](#reference-convert-to-astro-syntax) or to HTML web standards. This includes `<Link to="">`, `{children}`, and `className`, for example.
 
-1. Move any necessary JavaScript, including import statements, into a "code fence" (`---`). Note: JavaScript to [conditionally render content](/en/core-concepts/astro-components/#dynamic-html) is often written inside the HTML template directly in Astro.
+1. Move any necessary JavaScript, including import statements, into a ["code fence" (`---`)](/en/core-concepts/astro-components/#the-component-script). Note: JavaScript to [conditionally render content](/en/core-concepts/astro-components/#dynamic-html) is often written inside the HTML template directly in Astro.
 
-4. Write an `Astro.props` statement to access any additional props that were previously passed to your Gatsby function.
+4. Use [`Astro.props`](/en/reference/api-reference/#astroprops) to access any additional props that were previously passed to your Gatsby function.
 
-4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
+4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/core-concepts/framework-components/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
 
-4. Remove any GraphQL queries. Instead, use import and `Astro.glob()` statements to query your local files. Update any [dynamic HTML content variables](/en/core-concepts/astro-components/#dynamic-html) to use Astro-specific properties instead.
+4. Remove any GraphQL queries. Instead, use import and [`Astro.glob()`](/en/reference/api-reference/#astroglob) statements to query your local files. Update any [dynamic HTML content variables](/en/core-concepts/astro-components/#dynamic-html) to use Astro-specific properties instead.
 
 See [an example from Gatsby's Blog starter template converted step-by-step](#guided-example-gatsby-layout-to-astro)
 
@@ -240,9 +240,11 @@ Compare the following Gatsby component and a corresponding Astro component:
 
 ### Migrating Layout Files
 
-In Astro, your layout must include a full page shell (`<html>`, `<head>` and `<body>` tags) and a `<slot/>` instead of React's `{children}` prop. Your Gatsby `layout.js` and templates will not include these. 
+You may find it helpful to start by converting your Next.js layouts and templates into [Astro layout components](/en/core-concepts/layouts/).
 
-You can use the following code to provide these extra elements around an existing Gatsby layout file, or write your own:
+Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present, so it is common to reuse a layout file across pages. Astro uses a [`<slot />`](/en/core-concepts/astro-components/#slots) instead of React's `{children}` prop for page content, with no import statement required. Your Gatsby `layout.js` and templates will not include these.
+
+Note the standard HTML templating, and direct access to `<head>`:  
 
 ```astro title="src/layouts/Layout.astro" "slot"
 <html lang="en">
@@ -263,7 +265,7 @@ You may also wish to reuse code from Gatsby's `src/components/seo.js` to include
 
 ### Migrating Pages and Posts
 
-In Gatsby, your pages and posts may exist in `src/pages/` or outside of `src` in another folder, like `content`. In Astro, **all your page content must live within `src/`**.
+In Gatsby, your [pages and posts](/en/core-concepts/pages/) may exist in `src/pages/` or outside of `src` in another folder, like `content`. In Astro, **all your page content must live within `src/`**.
 
 #### React Pages
 
@@ -273,7 +275,7 @@ These `.astro` pages must be located within `src/pages/` and will have page rout
 
 #### Markdown and MDX pages
 
-Your existing Markdown and MDX files can be reused, but may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). They can also be placed within `src/pages/` to take advantage of automatic file-based routing.
+Astro has built-in support for Markdown and an optional integration for MDX files. Your existing [Markdown and MDX files](/en/guides/markdown-content/) can be reused, but may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). They can also be placed within `src/pages/` to take advantage of automatic file-based routing.
 
 When part of a [content collection](/en/guides/content-collections/), Markdown and MDX files will live in folders within `src/content/` and you will [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
 
@@ -307,7 +309,7 @@ const { to } = Astro.props
 
 ### Gatsby Imports to Astro
 
-If necessary, update any file imports to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
+If necessary, update any [file imports](/en/guides/imports/) to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
 
 Note that `.astro` and several other file types must be imported with their full file extension.
 
@@ -393,7 +395,9 @@ You can learn more about [using images in Astro](/en/guides/images/) in the Imag
 
 ### Gatsby GraphQL to Astro
 
-Remove all references to GraphQL queries, and instead use [`Astro.glob()`](/en/guides/imports/#astroglob) to access data from your local files. Or, to use content collections for your content, query your files using [`getCollection`](/en/guides/content-collections/#getcollection) 
+Remove all references to GraphQL queries, and instead use [`Astro.glob()`](/en/guides/imports/#astroglob) to access data from your local files. 
+
+Or, if using content collections, query your Markdown and MDX files in `src/content/` using [`getEntry()` and `getCollection()`](/en/guides/content-collections/#querying-content-collections). 
 
 These data requests are made in the frontmatter of the Astro component using the data.
 
@@ -431,6 +435,8 @@ export const pageQuery = graphql`
 ## Guided example: Gatsby layout to Astro
 
 This example converts the main project layout (`layout.js`) from Gatsby's blog starter to `src/layouts/Layout.astro`.
+
+This page layout shows one header when visiting the home page, and a different header with a link back to Home for all other pages.
 
 1. Identify the return() JSX.
 
@@ -596,6 +602,8 @@ This example converts the main project layout (`layout.js`) from Gatsby's blog s
       <p>About</p>
   </Layout>
   ```
+
+  You should see a link to "Home" only when visiting the About page.
 
 ## Community Resources 
 
