--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -15,7 +15,7 @@ Here are some key concepts and migration strategies to help you get started. Use
 Next.js and Astro share some similarities that will help you migrate your project:
 
 - The syntax of `.astro` files is similar to JSX. Writing Astro should feel familiar.
-- Astro projects can also be SSG or SSR. (Support for per-page rendering strategy is planned.)
+- Astro projects can also be SSG or [SSR](/en/guides/server-side-rendering/). (Support for per-page rendering strategy is planned.)
 - Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
 - Astro is component-based, and your markup structure will be similar before and after your migration.
 - Astro has [official integrations for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
@@ -113,11 +113,13 @@ Here are some tips for converting a Next `.js` component into a `.astro` compone
 
 2. Change any [Next or JSX syntax to Astro](#reference-convert-nextjs-syntax-to-astro) or to HTML web standards. This includes `<Link>`, `<Script>`, `{children}`, and `className`, for example.
 
-1. Move any necessary JavaScript, including import statements, into a "code fence" (`---`). Note: JavaScript to [conditionally render content](/en/core-concepts/astro-components/#dynamic-html) is often written inside the HTML template directly in Astro.
+1. Move any necessary JavaScript, including import statements, into a ["code fence" (`---`)](/en/core-concepts/astro-components/#the-component-script). Note: JavaScript to [conditionally render content](/en/core-concepts/astro-components/#dynamic-html) is often written inside the HTML template directly in Astro.
 
-4. Write an `Astro.props` statement to access any additional props that were previously passed to your Next function.
+4. Use [`Astro.props`](/en/reference/api-reference/#astroprops) to access any additional props that were previously passed to your Next function.
 
-4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
+4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/core-concepts/framework-components/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
+
+4. Replace `getStaticProps()` with import statements or [`Astro.glob()`](/en/reference/api-reference/#astroglob) to query your local files. Use `fetch()` to fetch external data.
 
 See [an example of a Next `.js` file converted step-by-step](#guided-example-next-data-fetching-to-astro).
 
@@ -204,7 +206,7 @@ Compare the following Next component and a corresponding Astro component:
 
 ### Migrating Layout Files
 
-You may find it helpful to start by converting your Next.js layouts and templates into Astro layout components.
+You may find it helpful to start by converting your Next.js layouts and templates into [Astro layout components](/en/core-concepts/layouts/).
 
 Next has two different methods for creating layout files, each of which handles layouts differently than Astro:
 
@@ -212,7 +214,7 @@ Next has two different methods for creating layout files, each of which handles 
 
 - [The `/app` directory (in beta)](https://beta.nextjs.org/docs/routing/pages-and-layouts#layouts)
 
-Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present, so it is common to reuse a layout file across pages. Astro uses a `<slot />` for page content, with no import statement required. Note the standard HTML templating, and direct access to `<head>`:  
+Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present, so it is common to reuse a layout file across pages. Astro uses a [`<slot />`](/en/core-concepts/astro-components/#slots) for page content, with no import statement required. Note the standard HTML templating, and direct access to `<head>`:  
 
 ```astro title="src/layouts/Layout.astro"
 ---
@@ -226,6 +228,7 @@ Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be 
 		<title>Astro</title>
 	</head>
 	<body>
+    <!-- Wrap the slot element with your existing layout templating -->
 		<slot />
 	</body>
 </html>
@@ -320,11 +323,11 @@ In Astro, **all your page content must live within `src/`**.
 
 Your existing Next JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#convert-jsx-files-to-astro-files). You cannot use an existing JSX page file in Astro.
 
-These `.astro` pages must be located within `src/pages/` and will have page routes generated automatically based on their file path.
+These [`.astro` pages](/en/core-concepts/pages/) must be located within `src/pages/` and will have page routes generated automatically based on their file path.
 
 #### Markdown and MDX pages
 
-Astro has built-in support for Markdown and an optional integration for MDX files. You can reuse any existing Markdown and MDX pages, but they may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). You will no longer need to manually create pages for each Markdown-generated route. These files can be placed within `src/pages/` to take advantage of automatic file-based routing.
+Astro has built-in support for Markdown and an optional integration for MDX files. You can reuse any existing [Markdown and MDX files](/en/guides/markdown-content/), but they may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). You will no longer need to manually create pages for each Markdown-generated route. These files can be placed within `src/pages/` to take advantage of automatic file-based routing.
 
 When part of a [content collection](/en/guides/content-collections/), Markdown and MDX files will live in folders within `src/content/` and you will [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
 
@@ -356,7 +359,7 @@ const { to } = Astro.props
 
 ### Next Imports to Astro
 
-If necessary, update any file imports to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
+If necessary, update any [file imports](/en/guides/imports/) to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
 
 Note that `.astro` and several other file types must be imported with their full file extension.
 
@@ -393,7 +396,7 @@ See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-comp
 
 ### Next Data Fetching to Astro
 
-Convert any instances of `getStaticProps()` to `Astro.glob()` or `getCollections()` to access data from other files in your project source. To fetch external data, use `fetch()`.
+Convert any instances of `getStaticProps()` to `Astro.glob()` or `getCollections()` to access data from other files in your project source. To [fetch remote data](/en/guides/data-fetching/), use `fetch()`.
 
 These data requests are made in the frontmatter of the Astro component using the data, and use top-level await.
 
@@ -413,7 +416,7 @@ const randomUser = data.results[0];
 ---
 ```
 
-See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob) or [fetching remote data](/en/guides/data-fetching/).
+See more about [local files imports with `Astro.glob()`](/en/guides/imports/#astroglob) or [querying using the Collections API]([fetching remote data](/en/guides/data-fetching/)).
 
 ### Next Styling to Astro
 
