--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -14,7 +14,7 @@ Here are some key concepts and migration strategies to help you get started. Use
 
 Gatsby and Astro share some similarities that will help you migrate your project:
 
-- The syntax of `.astro` files is similar to JSX. Writing Astro should feel familiar.
+- The [syntax of `.astro` files is similar to JSX](/en/core-concepts/astro-components/#differences-between-astro-and-jsx). Writing Astro should feel familiar.
 
 - Astro has built-in support for Markdown and an integration for using MDX files. Also, you can configure and continue to use many of your existing [Markdown plugins](/en/guides/markdown-content/#configuring-markdown-and-mdx).
 
