--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -14,7 +14,7 @@ Here are some key concepts and migration strategies to help you get started. Use
 
 Next.js and Astro share some similarities that will help you migrate your project:
 
-- The syntax of `.astro` files is similar to JSX. Writing Astro should feel familiar.
+- The [syntax of `.astro` files is similar to JSX](/en/core-concepts/astro-components/#differences-between-astro-and-jsx). Writing Astro should feel familiar.
 - Astro projects can also be SSG or [SSR](/en/guides/server-side-rendering/). (Support for per-page rendering strategy is planned.)
 - Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
 - Astro is component-based, and your markup structure will be similar before and after your migration.
