better similarities links

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -16,13 +16,13 @@ Gatsby and Astro share some similarities that will help you migrate your project
 
 - The [syntax of `.astro` files is similar to JSX](/en/core-concepts/astro-components/#differences-between-astro-and-jsx). Writing Astro should feel familiar.
 
-- Astro has built-in support for Markdown and an integration for using MDX files. Also, you can configure and continue to use many of your existing [Markdown plugins](/en/guides/markdown-content/#configuring-markdown-and-mdx).
+- Astro has built-in support for [Markdown](/en/guides/markdown-content/) and an integration for using MDX files. Also, you can configure and continue to use many of your existing Markdown plugins.
 
 - Astro also has [official integrations for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
 
-- Astro has support for installing NPM packages, including React libraries. You may be able to keep some or all of your existing React components and dependencies.
+- Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. You may be able to keep some or all of your existing React components and dependencies.
 
-- Astro projects can also be SSG or [SSR](/en/guides/server-side-rendering/). (Support for per-page rendering strategy is planned.)
+- Astro projects can also be SSG or [SSR with page level prerendering](/en/guides/server-side-rendering/#prerendering).
 
 ## Key Differences between Gatsby and Astro
 
