--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -15,11 +15,11 @@ Here are some key concepts and migration strategies to help you get started. Use
 Next.js and Astro share some similarities that will help you migrate your project:
 
 - The [syntax of `.astro` files is similar to JSX](/en/core-concepts/astro-components/#differences-between-astro-and-jsx). Writing Astro should feel familiar.
-- Astro projects can also be SSG or [SSR](/en/guides/server-side-rendering/). (Support for per-page rendering strategy is planned.)
+- Astro projects can also be SSG or [SSR with page level prerendering](/en/guides/server-side-rendering/#prerendering).
 - Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
-- Astro is component-based, and your markup structure will be similar before and after your migration.
+- Astro is [component-based](/en/core-concepts/components/), and your markup structure will be similar before and after your migration.
 - Astro has [official integrations for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
-- Astro has support for NPM packages, including several for React. You may be able to keep some or all of your existing React components and dependencies.
+- Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. You may be able to keep some or all of your existing React components and dependencies.
 
 ## Key Differences between Next.js and Astro
 
