added missing part and fixed link

--- a/src/pages/es/core-concepts/framework-components.mdx
+++ b/src/pages/es/core-concepts/framework-components.mdx
@@ -15,6 +15,26 @@ Astro incluye [integraciones opcionales](/es/guides/integrations-guide/) de Reac
 
 De forma predeterminada, los componentes de framework se renderizarán en el servidor, como HTML estático. Esto es útil para crear maquetados que no son interactivos y evitar enviar código JavaScript innecesario al cliente.
 
+## Usando componente de framework
+
+¡Usa los componentes de tu framework JavaScript en tus páginas de Astro, diseños y componentes al igual que los componentes de Astro! Todos sus componentes pueden vivir juntos en `/src/components`, o pueden organizarse de la manera que desee.
+
+Para usar un componente de framework, importalo desde su ruta relativa en el script de tu componente Astro. Luego, usa el componente junto con otros componentes, elementos HTML y expresiones JSX-like en la plantilla del componente.
+
+```astro title="src/pages/static-components.astro" ins={2,7}
+---
+import MyReactComponent from '../components/MyReactComponent.jsx';
+---
+<html>
+  <body>
+    <h1>¡Usa componentes de React directamente en Astro!</h1>
+    <MyReactComponent />
+  </body>
+</html>
+```
+
+Por defecto, tus componentes de framework solo se renderizarán en el servidor, como HTML estático. Esto es útil para crear componentes de maquetado que no son interactivos y evitar enviar código JavaScript innecesario al cliente.
+
 ## Hidratando componentes interactivos
 
 Un componente de framework puede hacerse interactivo (hidratado) usando una de las [directivas `client:*`](/es/reference/directives-reference/#directivas-del-cliente). Estos son atributos del componente que derminan cuando tu componente de JavaScript debería ser enviado al navegador.
