i18n(ja): Update guides/typescript.mdx

--- a/src/pages/ja/guides/typescript.mdx
+++ b/src/pages/ja/guides/typescript.mdx
@@ -50,7 +50,7 @@ import type { SomeType } from './script';
 
 こうすることで、Astroのバンドラーがインポートした型をJavaScriptであるかのように誤ってバンドルするようなエッジケースを避けることができます。
 
-`.tsconfig`ファイルで、TypeScriptにこれを補助させることができます。[`importsNotUsedAsValues`](https://www.typescriptlang.org/tsconfig#importsNotUsedAsValues)を`error`にセットすることで、TypeScriptはインポートをチェックし、いつ`import type`を使うべきか教えてくれるのです。この設定は、`strict`と`strictest`テンプレートにデフォルトで含まれています。
+`tsconfig.json`ファイルで、TypeScriptにこれを補助させることができます。[`importsNotUsedAsValues`](https://www.typescriptlang.org/tsconfig#importsNotUsedAsValues)を`error`にセットすることで、TypeScriptはインポートをチェックし、いつ`import type`を使うべきか教えてくれるのです。この設定は、`strict`と`strictest`テンプレートにデフォルトで含まれています。
 
 ```json title="tsconfig.json" ins={3}
 {
