--- a/src/pages/en/tutorial/5-astro-api/1.mdx
+++ b/src/pages/en/tutorial/5-astro-api/1.mdx
@@ -73,8 +73,8 @@ Now that you have a few blog posts to link to, let's configure the Blog page to 
   author: Astro Learner
   description: "This post will show up on its own!"
   image: 
-    url: "https://astro.build/assets/cover_Z1RSGKy.avif"
-    alt: "Diagram of HTML being fetched from a server."
+    url: "https://docs.astro.build/default-og-image.png"
+    alt: "The word “astro” against an illustration of planets and stars."
   pubDate: 2022-08-08
   tags: ["astro", "successes"]
   ---
