quick link fixes

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -71,7 +71,7 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
     node -v
     ```
     
-    If necessary, [update your version of Node](en/upgrade-astro/#removed-support-for-node-14) in your local and deployment environments.
+    If necessary, [update your version of Node](#removed-support-for-node-14) in your local and deployment environments.
 
 ## Do I need to update my code?
 
@@ -95,7 +95,7 @@ Many projects will not need any changes to the codebase! Your upgrade may now be
 
 - **a new, reserved folder `src/content/` for the new Collections API**
 
-  If you [have your own folder called `src/content/`](#added-srccontent), we'd like a word with you!
+  If you [have your own folder called `src/content/`](#reserved-srccontent), we'd like a word with you!
 
 - **three exciting features that are no longer experimental**
 
