--- a/src/pages/en/install/auto.mdx
+++ b/src/pages/en/install/auto.mdx
@@ -4,19 +4,19 @@ description: 'How to install Astro with NPM, PNPM, or Yarn via the create-astro 
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
-import InstallGuideTabGroup from '~/components/TabGroup/InstallGuideTabGroup.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Ready to install Astro? Follow our automatic or manual setup guide to get started.
+Ready to install Astro? Follow this guide to using the `create astro` CLI to get started.
 
+:::note[Prefer to install Astro manually?]
+Read our [step-by-step manual installation guide](/en/install/manual/) instead.
+:::
 #### Prerequisites
 
 - **Node.js** - `v16.12.0` or higher.
 - **Text editor** - We recommend [VS Code](https://code.visualstudio.com/) with our [Official Astro extension](https://marketplace.visualstudio.com/items?itemName=astro-build.astro-vscode).
 - **Terminal** - Astro is accessed through its command-line interface (CLI).
-
-<InstallGuideTabGroup />
 
 #### Installation
 
