--- a/src/pages/ja/guides/deploy/microsoft-azure.mdx
+++ b/src/pages/ja/guides/deploy/microsoft-azure.mdx
@@ -21,6 +21,6 @@ i18nReady: true
 
 2. Static Web Apps拡張機能を開いてAzureにサインインし、**+** ボタンをクリックして新しいStatic Web Appを作成します。使用するサブスクリプションキーを指定するように求められます。
 
-3. 拡張機能によって起動したウィザードに従い、アプリに名前を付け、フレームワークのプリセットを選択し、アプリのルート（通常は`/`）とビルドされたファイルの場所`/dist`を指定します。ウィザードが実行され、`.github`フォルダーに新しいworkflowを定義し、リポジトリに新しい[GitHub Action](https://github.com/features/actions)を追加します。
+3. 拡張機能によって起動したウィザードに従い、アプリに名前を付け、フレームワークのプリセットを選択し、アプリのルート（通常は`/`）とビルドされたファイルの場所`/dist`を指定します。ウィザードが実行され、`.github`フォルダーにworkflowを定義し、リポジトリに新しい[GitHub Action](https://github.com/features/actions)を追加します。
 
 GitHub Actionがアプリをデプロイします（GitHub上のリポジトリのActionsタブから進行状況を確認できます）。正常に完了すれば、**Browse Website**ボタンをクリックしてSWA拡張機能の進行状況ウィンドウに表示されているアドレスからアプリを確認できます（これはGitHub Actionの実行後に表示されます）。
