--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -43,24 +43,18 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
       ```shell
       # upgrades to Astro v2.x:
       npm i astro@latest
-      # to update all dependencies:
-      npm upgrade
       ```
       </Fragment>
       <Fragment slot="pnpm">
       ```shell
       # upgrades to Astro v2.x:
       pnpm i astro@latest
-      # to update all dependencies:
-      pnpm upgrade
       ```
       </Fragment>
       <Fragment slot="yarn">
       ```shell
       # upgrades to Astro v2.x:
-      yarn add astro@latest
-      # to update all dependencies:
-      yarn upgrade
+      yarn create astro@latest
       ```
       </Fragment>
     </PackageManagerTabs>
@@ -73,35 +67,31 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
     
     If necessary, [update your version of Node](#removed-support-for-node-14) in your local and deployment environments.
 
-## Do I need to update my code?
+## Update your code
 
 Many projects will not need any changes to the codebase! Your upgrade may now be complete. But, this upgrade does bring some big, potentially breaking changes:
 
-- **Vite 4**
-
-  Astro *should* [handle everything](#updated-vite-4) for you under the hood! But still, there's stuff to know!
-
 - **the complete removal of several previously-deprecated items**
 
-  Still using one of the [deprecated options mentioned below](#astro-20-breaking-changes)? That's got to go!
+  Still using one of the [deprecated options mentioned below](#astro-20-breaking-changes)? Replace them with their current equivalent!
 
 - **a new, unified location for your built assets**
 
-  Have a [deploy config that depends on chunks](#added-_astro-folder-for-build-assets)? See below!
+  Have a [deploy config that depends on chunks](#added-_astro-folder-for-build-assets)? See where your built assets are now!
 
 - **a redesign of Markdown and MDX plugin configuration**
 
-  Using plugins in [Markdown](#changed-markdown-plugin-configuration) and [MDX](#changed-mdx-plugin-configuration)? Convert your config!
+  Using plugins in [Markdown](#changed-markdown-plugin-configuration) and [MDX](#changed-mdx-plugin-configuration)? Convert your config with our updated flags!
 
 - **a new, reserved folder `src/content/` for the new Collections API**
 
-  If you [have your own folder called `src/content/`](#reserved-srccontent), we'd like a word with you!
+  Have [your own folder called `src/content/`](#reserved-srccontent)? Rename it to avoid conflicts!
 
 - **three exciting features that are no longer experimental**
 
   You [don't need these flags](#astro-20-experimental-flags-removed) to get the goodies. Open to everyone now!
 
-You might have some work to do, and [you might see Houston](#error-overlay) a few times before you're done! 
+You might have some work to do to fully upgrade your project, and [you might see Houston](#error-overlay) a few times before you're done! 
 
 If your project doesn't work as expected after upgrading to v2.0, then check this guide for major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. 
 
@@ -112,7 +102,7 @@ See [the changelog](https://github.com/withastro/astro/blob/main/packages/astro/
 
 ### Updated: Vite 4
 
-Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/). 
+Astro v2.0 upgrades from Vite 3 to [Vite 4](https://vitejs.dev/), released in December 2022.
 
 #### What should I do?
 
@@ -124,11 +114,11 @@ Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.
 
 ### Removed: Support for Node 14
 
-The minimum supported version of Node.js is now `16.12.0`.
+Node 14 is scheduled to reach its End of Life in April 2023. Astro 2.0 drops Node 14 support entirely, so that all Astro users can take advantage of Node's more modern features.
 
 #### What should I do?
 
-Both your development environment and your deployment environment must now meet this minimum standard.
+Astro 2.0 requires Node.js 16.12.0 or later. Both your development environment and your deployment environment must now meet this minimum standard.
 
 1. Check your local version of node using:
 
