Don’t encourage them!
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/install/manual.mdx
+++ b/src/pages/en/install/manual.mdx
@@ -9,7 +9,7 @@ import FileTree from '~/components/FileTree.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Ready to install Astro? Follow this manual set-up guide to get started.
+This guide will walk you through the steps to manually install and configure a new Astro project if you prefer not to use [the automatic CLI tool](/en/install/auto/).
 
 #### Want a quick way to get started?
 
