simplify install instrutions

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -42,19 +42,19 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
       <Fragment slot="npm">
       ```shell
       # upgrades to Astro v2.x:
-      npm i astro@latest
+      npm install astro@latest
       ```
       </Fragment>
       <Fragment slot="pnpm">
       ```shell
       # upgrades to Astro v2.x:
-      pnpm i astro@latest
+      pnpm install astro@latest
       ```
       </Fragment>
       <Fragment slot="yarn">
       ```shell
       # upgrades to Astro v2.x:
-      yarn create astro@latest
+      yarn add astro@latest
       ```
       </Fragment>
     </PackageManagerTabs>
