chopped experimental flag section

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -402,9 +402,11 @@ If you have an existing `src/content/` folder, it must be renamed to avoid confl
 
 ## Astro 2.0 Experimental Flags Removed
 
-Astro v2.0 brings some exciting new features from previous experimental flags into the core codebase!
+Astro v2.0 brings some new features from experimental flags into the core codebase.
 
-You can remove the following experimental flags from `astro.config.mjs`:
+#### What should I do?
+
+Remove the following previously-experimental flags from `astro.config.mjs`:
 
 ```js del={5-7}
 // astro.config.mjs
@@ -416,98 +418,12 @@ export default defineConfig({
   experimental: { error-overlay: true },
 })
 ```
-The following features are no longer hidden behind an experimental flag and are all enabled by default.
 
-#### What should I do?
+These features are now available by default:
 
-While these do not require a change to your codebase, you may now wish to enjoy:
-- [Content collections](#content-collections) as a way to manage your Markdown and MDX files with type-safety.
-- [Prerendering individual pages to static HTML](#prerendering) when using SSR to improve speed and cacheability.
-- [Error Overlay](#error-overlay) improvements: a complete redesign to help you better understand and fix your errors.
-
-
-
-### Content Collections
-
-The experimental flag `--experimental-contentCollections` has been removed. The Collections API is now available by default in Astro.
-
-In 1.0, you could choose to keep your Markdown and MDX pages within `src/pages/` for automatic file-based routing. Or, you could choose another folder within `src/` and import your Markdown content into `.astro` page files.
-
-Astro 2.0 adds a new way to manage your Markdown and MDX files in Astro, and a special `src/content/` folder. [Content collections](/en/guides/content-collections/) will organize your content, validate your frontmatter, and provide automatic TypeScript type-safety of fetched content. 
-
-<FileTree>
-- src/content/
-  - **newsletter/** 
-    - week-1.md
-    - week-2.md
-    - week-3.md
-  - **authors/**
-    - grace-hopper.md
-    - alan-turing.md
-    - batman.md
-</FileTree>
-
-
-Available in both SSG and SSR mode, collections can optionally include schemas to enforce consistent frontmatter within each collection and provide helpful autocompletion. Code with confidence, knowing the shape of your data as you reference it inside a page or component template.
-
-```ts
-// src/content/config.ts
-import { z, defineCollection } from 'astro:content';
-
-const blogSchema = defineCollection({
-  schema: z.object({
-    title: z.string(),
-    tags: z.array(z.string()),
-    image: z.string().optional(),
-  }),
-});
-
-export const collections = {
-  'blog': blogSchema,
-};
-```
-
-See more about using [content collections in Astro](/en/guides/content-collections/).
-
-### Prerendering
-
-The experimental flag `--experimental-prerender` has been removed. [The `prerender` feature](/en/guides/server-side-rendering/#prerendering) is now enabled by default when using [`output:'server'`](/en/reference/configuration-reference/#output). 
-
-In 1.0, one of the most requested features was to enable route-level control of output so that some routes can be server-rendered while others are statically-generated.
-
-Astro 2.0 enables per route, opt-in prerendering when using `output: 'server'` (SSR mode).
-
-Add `export const prerender = true` to any file in `src/pages/` that should be rendered at build time rather than request time.
-
-```astro title="src/pages/index.astro" {3}
----
-// This route should be generated at build time!
-export const prerender = true;
-
-const text = await fetch('https://example.com/').then(res => res.text())
----
-
-<Fragment set:html={text} />
-```
-See more about using [SSR mode in Astro](/en/guides/server-side-rendering/).
-
-### Error overlay
-
-The experimental flag `--experimental-error-overlay` has been removed.
-
-We hope you don't encounter too many errors when you build with Astro!
-
-But when you do, we hope that our new error overlay gives you more helpful, easy-to-read information. You can now expect:
-
-- A concise, descriptive error message identifying the problem.
-- A hint with more information, including tips for finding or resolving the issue.
-- A link to the error's page in docs. (There's one for every known Astro error!)
-- A full, syntax-colored code window showing the location of the error.
-- Support for dark and light mode.
-- Houston in the corner!
-
-<img src="https://user-images.githubusercontent.com/3019731/204646476-f6b27533-539e-4dfd-8f73-453a9159573e.png" alt="Screenshot of a color-coded and human-readable error message showing exactly where in your code an error occurred, with helpful tips for resoving the issue."/>
-
+- [Content collections](/en/guides/content-collections/) as a way to manage your Markdown and MDX files with type-safety.
+- [Prerendering individual pages to static HTML]((/en/guides/server-side-rendering/#prerendering)) when using SSR to improve speed and cacheability.
+- A redesigned error message overlay.
 
 ## Known Issues
 
