updated the list of changes

--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -69,7 +69,7 @@ Need to upgrade an older project to v1? See our [older migration guide](https://
 
 ## Update your code
 
-Many projects will not need any changes to the codebase! Your upgrade may now be complete. But, this upgrade does bring some big, potentially breaking changes:
+Many projects will not need any changes to the codebase. Your upgrade may now be complete! But, this upgrade does bring some breaking changes:
 
 - **the complete removal of several previously-deprecated items**
 
@@ -85,13 +85,11 @@ Many projects will not need any changes to the codebase! Your upgrade may now be
 
 - **a new, reserved folder `src/content/` for the new Collections API**
 
-  Have [your own folder called `src/content/`](#reserved-srccontent)? Rename it to avoid conflicts!
+  Have [an existing folder called `src/content/`](#reserved-srccontent)? Rename it to avoid conflicts!
 
 - **three exciting features that are no longer experimental**
 
-  You [don't need these flags](#astro-20-experimental-flags-removed) to get the goodies. Open to everyone now!
-
-You might have some work to do to fully upgrade your project, and [you might see Houston](#error-overlay) a few times before you're done! 
+  You [no longer need these flags](#astro-20-experimental-flags-removed) to get the goodies. Remove them from your Astro configuration!
 
 If your project doesn't work as expected after upgrading to v2.0, then check this guide for major highlights and instructions on how to handle breaking changes when upgrading from v1.x and v2.0-beta releases. 
 
