reviews all the "what should I dos" so they start with action verbs

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -124,12 +124,12 @@ Astro 2.0 requires Node.js 16.12.0 or later. Both your development environment a
     node -v
  
     ```
-    If your local development environment needs upgrading to Node 16, [install Node.js](https://nodejs.org/en/download/).
+    If your local development environment needs upgrading, [install Node.js](https://nodejs.org/en/download/).
 
 
 2. Check your [deployment environment's](/en/guides/deploy/) own documentation to verify that they support Node 16. 
 
-    You can specify Node 16.12.0 for your Astro project either in a dashboard configuration setting, or a `.nvmrc` file.
+    You can specify Node `16.12.0` for your Astro project either in a dashboard configuration setting, or a `.nvmrc` file.
 
 
 ### Removed: `legacy.astroFlavoredMarkdown`
@@ -140,7 +140,7 @@ Astro 2.0 removes the `legacy.astroFlavoredMarkdown` option completely. Importin
 
 #### What should I do?
 
-This legacy flag is no longer available in Astro and should be removed:
+Remove this legacy flag. It is no longer available in Astro.
 
 ```js del={3-5}
 // astro.config.mjs
@@ -247,7 +247,7 @@ GitHub-Flavored Markdown and Smartypants are now applied whether or not custom `
 
 ##### What should I do?
 
-You no longer need `extendDefaultPlugins: true` in your configuration. This is now Astro's default behavior in 2.0, and you can delete this line without any replacement.
+Remove `extendDefaultPlugins: true` in your configuration. This is now Astro's default behavior in 2.0, and you can delete this line without any replacement.
 
 ```js del={6}
 // astro.config.mjs
@@ -266,7 +266,7 @@ Astro 2.0 replaces `markdown.extendDefaultPlugins` with separate Boolean options
 
 ##### What should I do?
 
-The option `extendDefaultPlugins: false` no longer exists. To disable Astro's default plugins, disable each plugin individually instead.
+Replace `extendDefaultPlugins: false` and add the flags to disable each plugin individually instead.
 
 - `markdown.gfm: false` disables GitHub-Flavored Markdown
 - `markdown.smartypants: false` disables SmartyPants
@@ -298,7 +298,7 @@ Astro 2.0 replaces `mdx.extendPlugins` with three new, independently-configurabl
 
  ##### What should I do?
 
-MDX options will default to their equivalent in your Markdown config. You no longer need `extendPlugins: 'markdown'` in your configuration for this behavior.
+Delete `extendPlugins: 'markdown'` in your configuration. MDX options will default to their equivalent in your Markdown config by default. 
 
 ```js del={6}
 // astro.config.mjs
@@ -311,7 +311,7 @@ export default defineConfig({
 });
 ```
 
-If your MDX is currently configured to inherit only Astro's default plugins, replace `extendPlugins: 'defaults'` with `extendMarkdownConfig: false` to disable all inheritance. Use the [separate options for GitHub-Flavored Markdown and SmartyPants](/en/guides/integrations-guide/mdx/#options-inherited-from-markdown-config) to enable these default plugins individually in MDX.
+Replace `extendPlugins: 'defaults'` with `extendMarkdownConfig: false` and add the [separate options for GitHub-Flavored Markdown and SmartyPants](/en/guides/integrations-guide/mdx/#options-inherited-from-markdown-config) to enable these default plugins individually in MDX.
 
 ```js del={6} ins={7-9}
 // astro.config.mjs
@@ -375,18 +375,7 @@ Astro 2.0 gives remark and rehype plugins access to user frontmatter via frontma
 
 #### What should I do?
 
-If you have written remark or rehype plugins for Astro, note that `data.astro.frontmatter` is now the _complete_ Markdown or MDX document's frontmatter, rather than an empty object. You may need to update your plugin accordingly.
- 
-With access to a file's frontmatter, you can now write plugins that use this data! For example, to compute a full image URL based on an `imageSrc` slug in your document frontmatter:
-
-  ```ts
-  export function remarkInjectSocialImagePlugin() {
-    return function (tree, file) {
-      const { frontmatter } = file.data.astro;
-      frontmatter.socialImageSrc = new URL(frontmatter.imageSrc, 'https://my-blog.com/').pathname;
-    };
-  }
-  ```
+Check any remark and rehype plugins you have written to see whether their behavior has changed. Note that `data.astro.frontmatter` is now the _complete_ Markdown or MDX document's frontmatter, rather than an empty object.
 
 ### Reserved: `src/content/`
 
@@ -396,7 +385,7 @@ Astro 2.0 now includes the Collections API in the core codebase for organizing y
 
 #### What should I do?
 
-If you have an existing `src/content/` folder, it must be renamed to avoid conflicts. This folder, if it exists, can now only be used for [content collections](/en/guides/content-collections/).
+Rename an existing `src/content/` folder to avoid conflicts. This folder, if it exists, can now only be used for [content collections](/en/guides/content-collections/).
 
 ## Astro 2.0 Experimental Flags Removed
 
