more concise, targed what should I dos

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -112,11 +112,13 @@ Refer to the official [Vite Migration Guide](https://vitejs.dev/guide/migration.
 
 ### Removed: Support for Node 14
 
-Node 14 is scheduled to reach its End of Life in April 2023. Astro 2.0 drops Node 14 support entirely, so that all Astro users can take advantage of Node's more modern features.
+Node 14 is scheduled to reach its End of Life in April 2023. 
+
+Astro 2.0 drops Node 14 support entirely, so that all Astro users can take advantage of Node's more modern features.
 
 #### What should I do?
 
-Astro 2.0 requires Node.js 16.12.0 or later. Both your development environment and your deployment environment must now meet this minimum standard.
+ Check that both your development environment and your deployment environment are using **Node.js `16.12.0` or later**.
 
 1. Check your local version of node using:
 
@@ -231,7 +233,7 @@ You can control this location with the [new `build.assets` configuration option]
 
 #### What should I do?
 
-If your deployment relies on the location of these assets, you may need to update your configuration with your deployment platform.
+Update your configuration with your deployment platform if your deployment relies on the location of these assets. 
 
 
 ### Changed: Markdown plugin configuration
@@ -298,7 +300,7 @@ Astro 2.0 replaces `mdx.extendPlugins` with three new, independently-configurabl
 
  ##### What should I do?
 
-Delete `extendPlugins: 'markdown'` in your configuration. MDX options will default to their equivalent in your Markdown config by default. 
+Delete `extendPlugins: 'markdown'` in your configuration. This is now default behavior. 
 
 ```js del={6}
 // astro.config.mjs
@@ -329,7 +331,7 @@ export default defineConfig({
 
 #### Added: More MDX config options to match Markdown
 
-Setting `extendMarkdownConfig` to false now allows you to individually set [every available Markdown configuration option](/en/reference/configuration-reference/#markdown-options) (except `drafts`) separately in your MDX integration config, including `syntaxHighlight`, `shikiConfig` and more.
+Setting `extendMarkdownConfig: false` now allows you to individually set [every available Markdown configuration option](/en/reference/configuration-reference/#markdown-options) (except `drafts`) separately in your MDX integration configuration.
 
 ```js
 // astro.config.mjs
