changed to changed for new assets folder

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -216,7 +216,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 ```
 
-### Added: `_astro/` folder for build assets
+### Changed: `_astro/` folder for build assets
 
 In 1.0, assets were built to various locations, including `assets/`, `chunks/` and the root of the build output.
 
