--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -381,7 +381,7 @@ Check any remark and rehype plugins you have written to see whether their behavi
 
 ### Reserved: `src/content/`
 
-In 1.0, the [Collections API was hidden behind an experimental flag](#content-collections). This API reserves `src/content/` as a special folder.
+In 1.0, the [Collections API was hidden behind an experimental flag](#astro-20-experimental-flags-removed). This API reserves `src/content/` as a special folder.
 
 Astro 2.0 now includes the Collections API in the core codebase for organizing your Markdown and MDX files into [content collections](/en/guides/content-collections/).
 
