fix more links!

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -77,7 +77,7 @@ Many projects will not need any changes to the codebase. Your upgrade may now be
 
 - **a new, unified location for your built assets**
 
-  Have a [deploy config that depends on chunks](#added-_astro-folder-for-build-assets)? See where your built assets are now!
+  Have a [deploy config that depends on chunks](#changed-_astro-folder-for-build-assets)? See where your built assets are now!
 
 - **a redesign of Markdown and MDX plugin configuration**
 
@@ -411,7 +411,7 @@ export default defineConfig({
 These features are now available by default:
 
 - [Content collections](/en/guides/content-collections/) as a way to manage your Markdown and MDX files with type-safety.
-- [Prerendering individual pages to static HTML]((/en/guides/server-side-rendering/#prerendering)) when using SSR to improve speed and cacheability.
+- [Prerendering individual pages to static HTML](/en/guides/server-side-rendering/#prerendering) when using SSR to improve speed and cacheability.
 - A redesigned error message overlay.
 
 ## Known Issues
