Correcting Ghost dependencies integration commands
for ghost integrations with Astro.
I think *contentful* was added mistakenly
removing *contentful*.
- npm
- pnpm
- yarn

--- a/src/pages/en/guides/cms/ghost.mdx
+++ b/src/pages/en/guides/cms/ghost.mdx
@@ -62,17 +62,17 @@ To connect with Ghost, install the official content API wrapper [`@tryghost/cont
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npm install contentful @tryghost/content-api
+  npm install @tryghost/content-api
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm install contentful @tryghost/content-api
+  pnpm install @tryghost/content-api
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  yarn add contentful @tryghost/content-api
+  yarn add @tryghost/content-api
   ```
   </Fragment>
 </PackageManagerTabs>
